sumo/tests/netconvert/errors/XML/broken_edge/testsuite.netconvert
# Duplicate edge id (first edge)
edge#id__duplicate1

# Duplicate edge id (fourth edge)
edge#id__duplicate4

# Empty edge id (first edge)
edge#id__empty1

# Empty edge id (fourth edge)
edge#id__empty4

# Missing edge id (first edge)
edge#id__missing1

# Missing edge id (fourth edge)
edge#id__missing4


# Empty from node id (first edge)
edge#fromnode__empty1

# Empty from node id (fourth edge)
edge#fromnode__empty4

# Missing from node id (first edge)
edge#fromnode__missing1

# Missing from node id (fourth edge)
edge#fromnode__missing4


# Empty to node id (first edge)
edge#tonode__empty1

# Empty to node id (fourth edge)
edge#tonode__empty4

# Missing to node id (first edge)
edge#tonode__missing1

# Missing to node id (fourth edge)
edge#tonode__missing4


# Empty length (first edge)
edge#length__empty1

# Empty length (fourth edge)
edge#length__empty4

# Invalid length (first edge)
edge#length__false1

# Invalid length (fourth edge)
edge#length__false4


# Empty from position (first edge)
edge#frompos__empty1

# Empty from position (fourth edge)
edge#frompos__empty4

# Invalid from position (first edge)
edge#frompos__false1

# Invalid from position (fourth edge)
edge#frompos__false4












